--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -9,7 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout backend repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Flyctl
@@ -17,26 +17,24 @@ jobs:
 
       - name: Deploy to Fly
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          FLY_ACCESS_TOKEN: ${{ secrets.FLY_API_TOKEN }}
           FLY_APP_NAME: ${{ secrets.FLY_APP_NAME }}
           DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
-          if [ -z "$FLY_API_TOKEN" ] || [ -z "$FLY_APP_NAME" ]; then
-            echo "FLY_API_TOKEN and FLY_APP_NAME secrets are required" >&2
+          # Verify required secrets
+          if [ -z "$FLY_ACCESS_TOKEN" ] || [ -z "$FLY_APP_NAME" ]; then
+            echo "FLY_ACCESS_TOKEN and FLY_APP_NAME secrets are required" >&2
             exit 1
           fi
-          # Authenticate
-          export FLY_ACCESS_TOKEN="$FLY_API_TOKEN"
-          # Create app if it doesn't exist
-          flyctl apps create "$FLY_APP_NAME" || true
-          # Set secrets (Allowed hosts defaults to <app>.fly.dev)
+
+          # Set secrets on Fly app
           flyctl secrets set \
             DJANGO_SECRET_KEY="$DJANGO_SECRET_KEY" \
             DJANGO_DEBUG=false \
             DJANGO_ALLOWED_HOSTS="${FLY_APP_NAME}.fly.dev" \
             DATABASE_URL="$DATABASE_URL" \
             --app "$FLY_APP_NAME" --detach
-          # Deploy using the Dockerfile in backend repo
-          flyctl deploy --remote-only --app "$FLY_APP_NAME"
 
+          # Deploy app using Dockerfile + fly.toml
+          flyctl deploy --remote-only --app "$FLY_APP_NAME"
