--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -17,14 +17,14 @@ jobs:
 
       - name: Deploy to Fly
         env:
-          FLY_ACCESS_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
           FLY_APP_NAME: ${{ secrets.FLY_APP_NAME }}
           DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           # Verify required secrets
-          if [ -z "$FLY_ACCESS_TOKEN" ] || [ -z "$FLY_APP_NAME" ]; then
-            echo "FLY_ACCESS_TOKEN and FLY_APP_NAME secrets are required" >&2
+          if [ -z "$FLY_API_TOKEN" ] || [ -z "$FLY_APP_NAME" ]; then
+            echo "FLY_API_TOKEN and FLY_APP_NAME secrets are required" >&2
             exit 1
           fi
 
