--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -15,19 +15,15 @@ jobs:
       - name: Set up Flyctl
         uses: superfly/flyctl-actions/setup-flyctl@v1
 
+      - name: Authenticate with Fly
+        run: flyctl auth login --access-token "${{ secrets.FLY_API_TOKEN }}"
+
       - name: Deploy to Fly
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
           FLY_APP_NAME: ${{ secrets.FLY_APP_NAME }}
           DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
-          # Verify required secrets
-          if [ -z "$FLY_API_TOKEN" ] || [ -z "$FLY_APP_NAME" ]; then
-            echo "FLY_API_TOKEN and FLY_APP_NAME secrets are required" >&2
-            exit 1
-          fi
-
           # Set secrets on Fly app
           flyctl secrets set \
             DJANGO_SECRET_KEY="$DJANGO_SECRET_KEY" \
