--- a/fly.toml
+++ b/fly.toml
@@ -6,6 +6,7 @@ primary_region = "fra"
 [env]
   DJANGO_SETTINGS_MODULE = "backend.settings"
   PORT = "8000"
+  WEB_CONCURRENCY = "1"
 
 [http_service]
   internal_port = 8000
