--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ gunicorn==22.0.0
 whitenoise==6.7.0
 psycopg2-binary==2.9.9
 dj-database-url==2.2.0
-phonenumbers==8.13.43
+phonenumberslite==8.13.43
