--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -8,12 +8,16 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    # If your secrets live under a GitHub Environment, set its name here
-    # and ensure FLY_API_TOKEN, FLY_APP_NAME, DJANGO_SECRET_KEY, DATABASE_URL
-    # are defined in that environment. Otherwise, remove this line.
+    # If you use a GitHub Environment for secrets, set its exact name here
+    # (or remove this line to use repo-level secrets)
     environment: production
     env:
-      FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      # Let flyctl pick up the token implicitly
+      FLYCTL_ACCESS_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      # App + Django secrets available to all steps
+      FLY_APP_NAME: ${{ secrets.FLY_APP_NAME }}
+      DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -22,10 +26,6 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@v1
 
       - name: Deploy to Fly
-        env:
-          FLY_APP_NAME: ${{ secrets.FLY_APP_NAME }}
-          DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           # Set secrets on Fly app
           flyctl secrets set \
@@ -33,8 +33,7 @@ jobs:
             DJANGO_DEBUG=false \
             DJANGO_ALLOWED_HOSTS="${FLY_APP_NAME}.fly.dev" \
             DATABASE_URL="$DATABASE_URL" \
-            --app "$FLY_APP_NAME" --detach \
-            --access-token "$FLY_API_TOKEN"
+            --app "$FLY_APP_NAME" --detach
 
           # Deploy app using Dockerfile + fly.toml
-          flyctl deploy --remote-only --app "$FLY_APP_NAME" --access-token "$FLY_API_TOKEN"
+          flyctl deploy --remote-only --app "$FLY_APP_NAME"
